webroot/css/ays.css
/* ... */
.detail_produit .highlight{
	padding-top: 0;
}
.single #sidebar-right .thumbnail .caption {
    background: #1d1d1d;
}
.single #content:after {
	right: -310px;
    top: 220px;
    border-color: #00cfd4 transparent transparent #00cfd4;
}
.single #content:before {
	left: -10px;
    top: 220px;
}
.product-page #content:after {
	right: -310px;
    top: 200px;
    border-color: #00cfd4 transparent transparent #00cfd4;
}
.product-page #content:before {
	left: -10px;
    top: 200px;
}
.single #search-form:before{
	background: none repeat scroll 0 0 #009DBB;
    content: "";
    display: block;
    height: 220px;
    margin-left: -60px;
    margin-top: -20px;
    position: absolute;
    width: 350px;
    z-index: -5;
}
.product-page #search-form:before{
	margin-top: -197px;
	height: 200px;
}
/*DETAIL PRODUCT CAROUSEL*/
#carousel-detail{margin-bottom: 0; width: 580px; height: 435px; padding: 0 0 0 0;}
#carousel-detail .sliderkit-panels,#carousel-detail .sliderkit-panel,#carousel-detail .sliderkit-panels-wrapper {height:460px}
#carousel-detail .sliderkit-panel  img{display:block;}

#carousel-detail .sliderkit-nav-clip {width: 100%;overflow:visible;}
#carousel-detail .sliderkit-nav {position: absolute; text-align: center; vertical-align: middle;}
#carousel-detail .sliderkit-nav ul {width: 100%;}
#carousel-detail .sliderkit-nav ul li{margin: 0; padding: 0; width: 100px; height: 75px; border: solid black 5px;position:relative;z-index:20;}
#carousel-detail .sliderkit-nav ul li a{}
#carousel-detail .sliderkit-nav ul li.sliderkit-selected {border: solid white 5px;}
#carousel-detail .sliderkit-nav ul li.sliderkit-selected a {}
#carousel-detail .sliderkit-nav ul li.sliderkit-selected a img{}
#carousel-detail .sliderkit-nav-clip,#carousel-detail .sliderkit-btn {float:left;}
#carousel-detail .sliderkit-btn{margin-top:-0;width:25px;}
#carousel-detail .sliderkit-btn a{font-size:35px;line-height:97px;display:block;font-weight:700}
#carousel-detail .sliderkit-nav-prev,
#carousel-detail .sliderkit-nav-next {display: none;}
#carousel-detail .sliderkit-btn.sliderkit-btn-disable{opacity:50;filter: alpha(opacity=50);cursor:default;}
#carousel-detail .sliderkit-nav li.sliderkit-selected .arrow{ top:-10px;left:50%;margin-left:-2px;display:block;;}
#carousel-detail .sliderkit-nav li  .arrow{ display:none;}

/*IMAGES VIDEO*/
.images-video {padding: 0; margin: 0;}
.images-video li {display: block; float: left;}
.images-video li .arrow{ display:none;}
.images-video li a.active {background: #fff; color: #202020;position:relative;-webkit-box-shadow:none;box-shadow:none;-moz-box-shadow:none;}
.images-video li a.active .arrow{top:-5px;left:50%;margin-left:-2px;display:block;}

/*TAB CONTENT*/
#productTabWrap{width: 390px;float:left;padding-right:30px;min-height: 300px;}
#productTab{border:none;}
#productTab.nav-tabs > li {border: none; position:relative;}
#productTab.nav-tabs > li h3 {border: none; display:block;margin:0px;padding:0px;line-height: 16px; font-size:14px;font-weight:normal;}
#productTab.nav-tabs > li a {border: none;display: block; color:#fff; font-family: 'Open Sans'; font-size: 14px; padding: 15px; border-radius:0;-webkit-border-radius:0;-moz-border-radius:0;background-color: #61b5d7;margin-right:1px}
#productTab.nav-tabs > li.active   a,#productTab.nav-tabs > li.active   a:hover { color: white; background: #000; }
#productTab.nav-tabs > li a:hover {;background-color: #fff; color: #000;text-decoration:none;}
#productTab.nav-tabs > li .arrow {display:none}
#productTab.nav-tabs > li.active .arrow {position:absolute;bottom:-5px;left:45%;top:auto;display:block;}
.tab-content {border: none;}
.tab-pane h3 { color: #202020; font-size: 16px; line-height: 20px;}
.tab-pane p.desc { font-size: 13px; line-height: 18px; color: #939393; display: block; padding-top: 10px;}
.modal-body #box_desc {margin: 0px 0 20px 0; }
#box_desc {margin: 60px 0 40px 0; }
#box_desc .btn_contact,.dl_box{float: right; width:122px;} 
#readmore-box .detail_desc{margin-top:50px;}
.dl_box{margin-top:20px;}
.dl_box p {font-family: 'Open Sans';font-size:13px;}
.dl_box p.file_ttre{color:#4d4c54;display:block;font-weight:bold;;}
.dl_box p.file_info{color:#8b8b8b;display:block;margin-top:20px;}
.file_link a{;background:transparent url(../img/ico-pdf.png) 0% 0% no-repeat;width:56px;height:65px;display:block;}

/*DETAIL ABOUT*/
.detail_about #box_desc .detail_desc,
.detail_about #box_desc .detail_desc p{
	font-size:13px;
	color: #fff;
}
.detail_about #box_desc .detail_desc h2,
.detail_about #box_desc .detail_desc h3{
	font-size:13px;
	line-height:125%;
	font-weight: 700;
	margin-bottom:15px;
	color: #009cbb;
	text-transform: uppercase;
}
#detail_about {
	padding:15px 0;
	width:280px;
}
#detail_about ul{padding: 0;margin:0;}
#detail_about li{list-style: none;display:block;padding:0;margin:5px 0 5px 0;font-weight:600;font-weight:normal; }
#detail_about .feature-label{color:#fff;display:block;font-size:11px;}
#detail_about .value{color:#959595;display:block;font-size:12px}

/*DETAIL COUPON*/
.coupon-img{margin-bottom:20px;}
.coupon{background:transparent url(../img/bg_coupon.png) 0 100% no-repeat;padding-bottom:23px;margin: 0 0 20px 0;width:100%;}
.detail_coupon {}
.detail_coupon .highlight{background:#000;color:#fff;padding:20px; position:realtive;z-index:2;font-size:24px;font-weight:bold;;}
.detail_coupon .page_ttre {margin:20px 0;color:#000;}
.detail_coupon .detail_desc h2.ttre{color:#000;font-size:16px;}

/*News LIST*/
.list .thumbnail .arrow.left{
	left:155px;
}
.list .thumbnail p.price, 
.list .thumbnail .cat {
	line-height:45px;
	height:45px;
}
.list .thumbnail p.desc{
	padding-top: 5px;
	padding-bottom: 5px;
}
.list #content:before{
	top: 182px;
}
.list #content:after{
	right: -10px;
    top: 0;
}
/*Negativ margin for featured top elements*/
.list .page_ttre,
.list .listing_controls,
p.pdt_count,
#top_detail,
.single .highlight{
	margin-left: -50px;
	margin-right: -350px;
	padding-right: 340px;
	z-index: 3;
}
#top_detail{
	padding-right: 380px;
}
/* ... */

